lesson: update the slides

--- a/doc/presentation.tex
+++ b/doc/presentation.tex
@@ -75,7 +75,7 @@
 \begin{frame}{Organization}
 \begin{itemize}
   \item $2$ groups
-  \item $7$ sessions for each group
+  \item $7$ sessions
   \item $1 + 5$ assignments
   \item Registration deadline: January 31
   \item Completion deadline: two weeks after the exam
@@ -180,7 +180,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Repository Structure}
+\begin{frame}{Repository}
   \centering
   \begin{itemize}
     \item doc/
