doc: rename assignment* to lab*

--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -76,7 +76,7 @@
 \begin{itemize}
   \item $2$ groups
   \item $7$ sessions
-  \item $1 + 5$ assignments
+  \item $1 + 5$ labs
   \item Registration deadline: January 31
   \item Completion deadline: two weeks after the exam
 \end{itemize}
@@ -98,7 +98,7 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{Assignment 0: Standalone Database}
+\begin{frame}{Lab 0: Standalone Database}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/standalone-agents}
   \vspace{0.5em}
@@ -107,11 +107,11 @@
     \item \alert{TODO}: complete the implementation the read and write operations of the database
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment0.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab0.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Assignment 1: Client-Server Database}
+\begin{frame}{Lab 1: Client-Server Database}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/single-server}
   \begin{itemize}
@@ -119,11 +119,11 @@
     \item \alert{TODO}: implement the client/server communication mechanism ensuring thread-safeness
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment1.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab1.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Assignment 2: Object Request Broker}
+\begin{frame}{Lab 2: Object Request Broker}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/name-service}
   \begin{itemize}
@@ -132,11 +132,11 @@
     \item \alert{TODO}: complete the implementation of the ORB
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment2.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab2.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Assignment 3: Peer-to-Peer Communication}
+\begin{frame}{Lab 3: Peer-to-Peer Communication}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/chat}
   \begin{itemize}
@@ -144,11 +144,11 @@
     \item \alert{TODO}: complete the routines dealing with the peers who are joining the system and those who are leaving
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment3.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab3.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Assignment 4: Distributed Locks}
+\begin{frame}{Lab 4: Distributed Locks}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/lock}
   \begin{itemize}
@@ -156,11 +156,11 @@
     \item \alert{TODO}: implement the second Ricart--Agrawala algorithm
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment4.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab4.pdf}
   \end{center}
 \end{frame}
 
-\begin{frame}{Assignment 5: Client-Server Database with Replicas}
+\begin{frame}{Lab 5: Client-Server Database with Replicas}
   \centering
   \includegraphics[scale=0.10,page=1]{include/assets/distributed-database}
   \begin{itemize}
@@ -168,7 +168,7 @@
     \item \alert{TODO}: complete the implementation of the server/peer using all the previously developed components
   \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/assignment5.pdf}
+    \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab5.pdf}
   \end{center}
 \end{frame}
 
