doc: use “lab” instead of “assignment”

--- a/doc/include/common.tex
+++ b/doc/include/common.tex
@@ -113,4 +113,4 @@
 \newcommand{\tlab}[1]{\label{tab:#1}}
 \newcommand{\flab}[1]{\label{fig:#1}}
 
-\newcommand{\aref}[1]{Assignment~#1 \cite{description#1}}
+\newcommand{\aref}[1]{Lab~#1 \cite{description#1}}
