--- a/doc/lab0.tex
+++ b/doc/lab0.tex
@@ -3,7 +3,7 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed System: Assignment 0\\Standalone Database}
+\title{Distributed System: Lab 0\\Standalone Database}
 \author{\input{include/authors.tex}}
 \date{December 20, 2015}
 
@@ -12,24 +12,23 @@
 
 \section{Introduction to the Programming Project} \slab{data-format}
 \input{include/assets/distributed-database.tex}
-Welcome to the course! Over six programming assignments, from zero to five, you
-will learn and put into practice the key components of a distributed system
-\cite{lecture1}. To this end, you will implement your own distributed system,
-namely, a distributed database of short messages known as fortunes
-\cite{fortune}.
+Welcome to the course! Over six labs, from zero to five, you will learn and put
+into practice the key components of a distributed system \cite{lecture1}. To
+this end, you will implement your own distributed system, namely, a distributed
+database of short messages known as fortunes \cite{fortune}.
 
 The final configuration of the system that you will obtain by the end of the
-fifth assignment is depicted in \fref{distributed-database}. This system is
-composed of a number of servers/peers (SP) and a number of clients (C). The
-servers maintain copies of the database (DB) and ensure that these copies are
-kept consistent across all the peers using a distributed locking mechanism (L).
-The clients interact with this peer-to-peer network of servers in order to
-perform various operations on the data. The participants of the network discover
-each other by virtue of a so-called name service (NS); for clarity, these
-communications are not shown.
+fifth lab is depicted in \fref{distributed-database}. This system is composed of
+a number of servers/peers (SP) and a number of clients (C). The servers maintain
+copies of the database (DB) and ensure that these copies are kept consistent
+across all the peers using a distributed locking mechanism (L). The clients
+interact with this peer-to-peer network of servers in order to perform various
+operations on the data. The participants of the network discover each other by
+virtue of a so-called name service (NS); for clarity, these communications are
+not shown.
 
-In each assignment, you will make a step towards the outlined goal by focusing
-on a particular component of the final system:
+In each lab, you will make a step towards the outlined goal by focusing on a
+particular component of the final system:
 \begin{enumerate}
 
   \setcounter{enumi}{-1}
@@ -55,37 +54,37 @@ on a particular component of the final system:
 
 \end{enumerate}
 
-For each assignment, you will be given a skeleton of the code that corresponds
-to a particular part of the system, and your task will be to understand what the
-code does and to complete the implementation. The programming language that we
-shall be using throughout the course is \python\ \cite{language}, more
-precisely, the third version of \python\ \cite{python}. Even if you are not
-familiar with \python, the language is straightforward to learn, and the source
-code, provided to you, with a little bit of reading \cite{python-tutorial,
-python-library} will be enough to readily get started and to successfully finish
-this programming project. The above-mentioned skeletons for the assignments and
-the corresponding instructions (just like the one below for the zeroth
-assignment) are provided to you on the web page \cite{course} of the course.
+For each lab, you will be given a skeleton of the code that corresponds to a
+particular part of the system, and your task will be to understand what the code
+does and to complete the implementation. The programming language that we shall
+be using throughout the course is \python\ \cite{language}, more precisely, the
+third version of \python\ \cite{python}. Even if you are not familiar with
+\python, the language is straightforward to learn, and the source code, provided
+to you, with a little bit of reading \cite{python-tutorial, python-library} will
+be enough to readily get started and to successfully finish this programming
+project. The above-mentioned skeletons for the labs and the corresponding
+instructions (just like the one below for the zeroth lab) are provided to you on
+the web page \cite{course} of the course.
 
-\section{Introduction to the Assignment}
+\section{Introduction to the Lab}
 \input{include/assets/standalone-agents.tex}
-The goal of the zeroth assignment is to introduce you to \python. Here we
-consider a non-distributed system that consists of a number of standalone
-machines, each of which acts as a server and as a single possible client of this
-server at the same time. The scenario is depicted in \fref{standalone-agents}.
-The machines do not interact with each other and perform all the operations on
-their own copies of the data without any synchronization. In what follows, we
-shall refer to such a standalone machine with the server/client functionality as
-simply \classname{Client}.
+The goal of the zeroth lab is to introduce you to \python. Here we consider a
+non-distributed system that consists of a number of standalone machines, each of
+which acts as a server and as a single possible client of this server at the
+same time. The scenario is depicted in \fref{standalone-agents}. The machines do
+not interact with each other and perform all the operations on their own copies
+of the data without any synchronization. In what follows, we shall refer to such
+a standalone machine with the server/client functionality as simply
+\classname{Client}.
 
 \section{Data Format} \slab{data-format}
-In all the assignments, the list of fortunes, \ie, the actual data in our
-database, will be stored in a text file conventionally called
-\filename{fortune.db}. Such a file will be provided to you along with the source
-code; however, you are free to come up with your own lists of fortunes. The
-format of \filename{fortune.db} is rather straightforward: each message ends
-with a new line containing a single percent sign (\texttt{\%}). For example, the
-following text contains two fortunes:
+In all the labs, the list of fortunes, \ie, the actual data in our database,
+will be stored in a text file conventionally called \filename{fortune.db}. Such
+a file will be provided to you along with the source code; however, you are free
+to come up with your own lists of fortunes. The format of \filename{fortune.db}
+is rather straightforward: each message ends with a new line containing a single
+percent sign (\texttt{\%}). For example, the following text contains two
+fortunes:
 \begin{fortune}
 Everything should be made as simple as possible, but not simpler.
     -- Albert Einstein
@@ -102,9 +101,8 @@ writing your code for the interaction with the database.
 \subsection{Preparation} \slab{preparation}
 Clone the repository of the programming project or download the latest snapshot
 of the repository as a single zip archive \cite{repository}. The files relevant
-to this assignment are listed below; note that the paths are given with respect
-to the \filename{src} directory of the repository. You should read and
-understand them.
+to this lab are listed below; note that the paths are given with respect to the
+\filename{src} directory of the repository. You should read and understand them.
 \begin{itemize}
 
   \item \filename{lab0/client.py} --- the main file of the application that each
@@ -166,14 +164,13 @@ you should complete the implementation of the following three function in
 Recall the note at the end of \sref{data-format}.
 
 \section{Conclusion}
-Having completed the assignment, you can now perform the reading and writing
-operations on the database. However, if you run several instances of the
-application on different machines (see \fref{standalone-agents}) or in different
-terminal windows on the same machine and try to add a new fortune in one of
-them, the other clients will not see the change. The reason is that the clients
-do not collaborate with each other and, therefore, do not try to keep their
-copies of the data consistent. In the next assignment, we will mitigate this
-problem.
+Having completed the lab, you can now perform the reading and writing operations
+on the database. However, if you run several instances of the application on
+different machines (see \fref{standalone-agents}) or in different terminal
+windows on the same machine and try to add a new fortune in one of them, the
+other clients will not see the change. The reason is that the clients do not
+collaborate with each other and, therefore, do not try to keep their copies of
+the data consistent. In the next lab, we will mitigate this problem.
 
 \printbibliography
 
