lesson: update the slides

--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -74,9 +74,10 @@
 
 \begin{frame}{Organization}
 \begin{itemize}
-  \item $2$ groups
-  \item $7$ sessions
+  \item $1$ teaching session
+  \item $7$ lab sessions
   \item $1 + 5$ labs
+  \item $2$ groups
   \item Registration deadline: January 31
   \item Completion deadline: two weeks after the exam
 \end{itemize}
