Update the TODOs in the slides

--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -105,7 +105,8 @@
   \vspace{0.5em}
   \begin{itemize}
     \item Local database for each client
-    \item \alert{TODO}: complete the implementation the read and write operations of the database
+    \item \alert{TODO}: complete the implementation of the read and write
+    operations of the database
   \end{itemize}
   \begin{center}
     \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab0.pdf}
@@ -117,7 +118,8 @@
   \includegraphics[scale=0.10,page=1]{include/assets/single-server}
   \begin{itemize}
     \item Centralized database
-    \item \alert{TODO}: implement the client/server communication mechanism ensuring thread-safeness
+    \item \alert{TODO}: complete the implementation of the client/server
+    communication mechanism
   \end{itemize}
   \begin{center}
     \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab1.pdf}
@@ -129,7 +131,7 @@
   \includegraphics[scale=0.10,page=1]{include/assets/name-service}
   \begin{itemize}
     \item Name service and object request broker (ORB)
-    \item Abstract away the communication part from functionality
+    \item Abstract away the communication part of the functionality
     \item \alert{TODO}: complete the implementation of the ORB
   \end{itemize}
   \begin{center}
@@ -142,7 +144,8 @@
   \includegraphics[scale=0.10,page=1]{include/assets/chat}
   \begin{itemize}
     \item Smart mechanism for keeping track of peers
-    \item \alert{TODO}: complete the routines dealing with the peers who are joining the system and those who are leaving
+    \item \alert{TODO}: complete the functionality dealing with the peers
+    joining or leaving the system
   \end{itemize}
   \begin{center}
     \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab3.pdf}
@@ -154,7 +157,8 @@
   \includegraphics[scale=0.10,page=1]{include/assets/lock}
   \begin{itemize}
     \item Distributed mutual exclusion to control concurrent operations
-    \item \alert{TODO}: implement the second Ricart--Agrawala algorithm
+    \item \alert{TODO}: complete the implementation of the second
+    Ricart--Agrawala algorithm
   \end{itemize}
   \begin{center}
     \scriptsize \url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab4.pdf}
